<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Album</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Albums</string>
    <string name="title_section2">Photos</string>
    <string name="title_section3">Tags</string>
    <string name="search">Search</string>
    <string name="search_hint">Search By Tag</string>
    <string name="new_album">New Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="rename_album">Rename Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="album_title">Album Title</string>
    <string name="photo_filename">Photo Filename</string>
    <string name="ok">Create</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tags">Manage Tags</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="move_photo">Move Photo</string>
    <string name="image">Image</string>
    <string name="tag_help">Deselect tags to delete them.</string>
    <string name="play">Play Slideshow</string>
    <string name="title_activity_slide_show">SlideShowActivity</string>
    <string name="dummy_button">Button</string>
    <string name="dummy_content">CONTENT</string>

</resources>