<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_photo"
        android:icon="@drawable/content_new_picture"
        android:showAsAction="ifRoom"
        android:title="@string/add_photo"/>
    <item
        android:id="@+id/take_photo"
        android:icon="@drawable/device_access_camera"
        android:showAsAction="ifRoom"
        android:title="@string/take_photo"/>
    <item
        android:id="@+id/rename_album"
        android:icon="@drawable/content_edit"
        android:showAsAction="ifRoom"
        android:title="@string/rename_album"/>
    <item
        android:id="@+id/delete_album"
        android:icon="@drawable/content_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete_album"/>
</menu>